public/css/editor.css
#transcript a {
  color: black;
}
.selected {
  background-color: #f5f5f5;
}
a.played {
  text-decoration: underline;
}
span.hidden {
  font-size: 0px;
}
span.hidden::after {
  background-color: #c0c0c0;
  font-size: medium;
  content: '...';
  cursor: col-resize;
}
span.speaker {
  display: none;
  font-weight: bold;
}
span.speaker.M {
  color: blue;
}
span.speaker.F {
  color: red;
}
canvas {
  padding: 0;
  margin: auto;
  display: block;
  width: 300px;
  height: 169px;
}
#editorMenu {
  margin-top: 52px;
}
.pusher {
  padding-top: 92px;
}
.pusher.preview {
  padding-bottom: 169px;
}
.sidebar {
  background-color: #fff;
}
.sidebar.left, .sidebar.right {
  margin-top: 92px !important;
  padding-bottom: 92px !important;
}
@media print {
  .menu, .sidebar {
    display: none !important;
  }
  .pusher {
    margin-top: 0;
  }
  .pusher.preview {
    padding-bottom: 0;
  }
}

